# api-ms-win-core-synch-Win7

./: CMakeLists.txt  Containerfile  api-ms-win-core-synch-l1-2-0.c  api-ms-win-core-synch-l1-2-0.def  dxgi.c  dxgi.def
.github/workflows/: build.yml
